1. global exception handler added 2. generate random squad teams added